[package]
name = "yew-bulma"
version = "0.0.2"
authors = ["Jonathan Johnson <jon@khonsulabs.com>"]
edition = "2018"
description = "Yew components compatible with the Bulma CSS framework"
readme = "./README.md"
license = "MIT"
keywords = ["yew", "bulma"]
categories = ["wasm", "web-programming"]
repository = "https://github.com/khonsulabs/yew-bulma"

[dependencies]
web-sys = "0.3"
js-sys = "0.3"
include_dir = "0.6"
yew = "0.17"
pulldown-cmark = "0.8"
thiserror = "1"
float-cmp = "0.8"
chrono = { version = "0.4", features = ["serde", "js-sys"] }
